--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>CapsuleCRMAutomation_HybridFrameWork</artifactId>
+    <artifactId>UserLoadTesting</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -32,8 +32,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
 
@@ -186,6 +186,5 @@
 
 
     </dependencies>
-
 
 </project>
